[package]
name = "kphis-pacs-agent-template"
version = "0.1.0"
rust-version = "1.90"
edition = "2024"
authors = ["Marisada Pitaktham <p.marisada@gmail.com>"]
description = "Minimal Template for KPHIS PACs Agent"
license = "MIT"
repository = "https://github.com/Marisada/kphis-pacs-agent-template"
keywords = []

[dependencies]
axum = { version = "0.8", features = [ "macros" ] }
http-body-util = "0.1"
serde = "=1"
serde_derive = "1"
time = { version = "0.3", features = [ "macros", "parsing", "serde-human-readable" ]}
tokio = { version = "1", features = [ "full" ]}
tower-http = { version = "0.6", features = [ "fs", "compression-br", "compression-gzip", "set-header", "trace", "timeout" ]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "chrono", "ansi", "env-filter" ] }

[target.'cfg(all(target_arch = "x86_64", target_env = "musl"))'.dependencies]
tikv-jemallocator = "0.6"

[target.'cfg(all(target_arch = "aarch64", target_env = "musl"))'.dependencies]
mimalloc = "0.1"

[dev-dependencies]
axum-test = "17"

[profile.release]
lto = true
opt-level = 'z'
incremental = false
panic = "abort"
debug = false
codegen-units = 1
strip = true